log
vi., 13 de may. de 2022 16:52:50: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  2|4
total_score: 15/70
f9615d1
vi., 13 de may. de 2022 17:12:13: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:48:11: error: unused variable 'j' [-Werror=unused-variable]
    int i, j;
           ^
cc1.exe: all warnings being treated as errors
Compilation failed
2d4b3de
vi., 13 de may. de 2022 17:12:19: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
b35c37f
vi., 13 de may. de 2022 17:26:57: 
 sudoku.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:47:9: error: unused variable 'repe' [-Werror=unused-variable]
    int* repe = (int*) calloc (10, sizeof(int));
         ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7125f24
vi., 13 de may. de 2022 17:31:50: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:57:73: error: 'dsadasd' undeclared (first use in this function)
          if(repe[k] > 1){correcto = 0;} if (correcto  == 0) {return 0;} dsadasd
                                                                         ^~~~~~~
sudoku.c:57:73: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:58:8: error: expected ';' before '}' token
        }
        ^
sudoku.c:47:9: error: unused variable 'repe' [-Werror=unused-variable]
    int* repe = (int*) calloc (10, sizeof(int));
         ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
8a7405b
vi., 13 de may. de 2022 17:31:56: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:47:9: error: unused variable 'repe' [-Werror=unused-variable]
    int* repe = (int*) calloc (10, sizeof(int));
         ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7aa1e21
vi., 13 de may. de 2022 17:32:20: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|4
total_score: 15/70
c551d41
vi., 13 de may. de 2022 17:33:44: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
8f46240
vi., 13 de may. de 2022 17:35:13: 
 sudoku.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
389fb2a
vi., 13 de may. de 2022 17:35:38: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
219a101
vi., 13 de may. de 2022 17:35:56: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
f4b3345
vi., 13 de may. de 2022 17:37:34: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
05b4e10
vi., 13 de may. de 2022 17:37:52: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
cebd39e
vi., 13 de may. de 2022 17:41:40: 
 sudoku.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
db4834f
vi., 13 de may. de 2022 17:44:09: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
4269c36
vi., 13 de may. de 2022 17:46:18: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  5|3
total_score: 35/70
fd2f4b5
vi., 13 de may. de 2022 17:49:50: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  5|3
total_score: 35/70
d3444d5
vi., 13 de may. de 2022 18:53:27: 
 sudoku.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'print_node':
sudoku.c:38:5: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'for'
     for(i=0;i<9;i++){
     ^~~
sudoku.c:38:14: error: statement with no effect [-Werror=unused-value]
     for(i=0;i<9;i++){
             ~^~
sudoku.c:38:20: error: expected ';' before ')' token
     for(i=0;i<9;i++){
                    ^
sudoku.c:38:20: error: expected statement before ')' token
sudoku.c:39:12: error: 'j' undeclared (first use in this function)
        for(j=0;j<9;j++)
            ^
sudoku.c:39:12: note: each undeclared identifier is reported only once for each function it appears in
cc1.exe: all warnings being treated as errors
Compilation failed
8acfcfe
vi., 13 de may. de 2022 18:53:51: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
e10c12c
